# firestation-gateway

./: .pylintrc  LICENSE  Makefile  README.md  build-wheel.sh  config-template-RPI-IO-Board-0A0.yaml  config.yaml  install-pi.sh  pyproject.toml
src/firestation_gateway/: __init__.py  config.example.yaml  core.py
src/firestation_gateway/connectapi/: __init__.py  client.py  model.py
src/firestation_gateway/consumers/: __init__.py  base.py  connect.py  generic_output.py  tetracontrol.py
src/firestation_gateway/producers/: __init__.py  generic_input.py  genius.py
src/firestation_gateway/tetracontrol/: __init__.py  client.py  model.py
