[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "firestation-gateway"
dynamic = ["version"]
authors = [
  { name="Bjoern Lemp", email="firest0rm@zottel-net.de" },
]
description = "Firestation Gateway"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

# Project dependencies
#
dependencies = [
  'requests',
  'pyee',
  'pyyaml',
  'python-periphery',
  'click'
]

# pip not supporting 'dependency-groups' we used 
# project.optional-dependencies for now.
#
[project.optional-dependencies]
dev = [
  'pylint',
  'pylint-venv',
  'ruff',
]
tests = [
  'pytest',
  'pytest-cov',
  'coverage',
]

[project.scripts]
firestation-gw = "firestation_gateway:main"


# Tool settings
#
[tool.flit]
module = "firestation_gateway"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 79
exclude = ["tests/*", "build/*", "dist/*"]
